Fix basic layout styling
I realized I can style img! it comes up because of the JS! Of course!

--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ template {
 /* Start
      ========================================================================== */
 
-     html {
+    html {
       font-size: 18px;
     }
     
@@ -362,11 +362,11 @@ template {
       padding: 2rem;
     }
     
-    main {
-      margin: 0 auto;
-    }
-    
     div {
       padding: 1rem;
     }
-    
+
+    img {
+      max-width: 100%;
+      margin: 0 auto;
+    }
