--- a/style.css
+++ b/style.css
@@ -370,3 +370,11 @@ template {
       max-width: 100%;
       margin: 0 auto;
     }
+
+    img::before {
+      content: "“";
+    }
+
+    img::after {
+      content: "”";
+    }
