Make the footer sticky

--- a/style.css
+++ b/style.css
@@ -360,11 +360,14 @@ template {
     body {
       font-family: sans-serif;
       padding: 1rem;
-    }
-    
-    div {
-      padding: 1rem;
-      background-color: white;
+      /* add a fun background! https://heropatterns.com/ or https://cssgradient.io/ */
+      background: rgb(176,58,180);
+      background: linear-gradient(90deg, rgba(176,58,180,1) 0%, rgba(255,140,66,1) 50%, rgba(252,224,69,1) 100%);
+      /* Make the footer sticky */
+      min-height: 100%;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      min-height: 100vh;
     }
 
     img {
@@ -381,9 +384,5 @@ template {
       font-weight: normal;
     }
 
-    /* is there an elegant way to make this stick to the bottom? */
-    footer {
-      padding-top: 2rem;
-    }
 
 
