--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ template {
     body {
       font-family: sans-serif;
       padding: 1rem;
-      /* add a fun background! https://heropatterns.com/ or https://cssgradient.io/ */
+      /* add a fun background! */
       background: rgb(176,58,180);
       background: linear-gradient(90deg, rgba(176,58,180,1) 0%, rgba(255,140,66,1) 50%, rgba(252,224,69,1) 100%);
       /* Make the footer sticky */
