--- a/style.css
+++ b/style.css
@@ -373,6 +373,7 @@ template {
     img {
       max-width: 100%;
       margin: 0 auto;
+      border-radius: 10px;
     }
 
     header { 
@@ -380,7 +381,7 @@ template {
     }
 
     h1 {
-      font-size: 1rem;
+      font-size: 1.25rem;
       font-weight: normal;
     }
 
