Make text right aligned

--- a/style.css
+++ b/style.css
@@ -368,6 +368,7 @@ template {
       display: grid;
       grid-template-rows: auto 1fr auto;
       min-height: 100vh;
+      text-align: end;
     }
 
     img {
