--- a/style.css
+++ b/style.css
@@ -371,9 +371,12 @@ template {
       text-align: end;
     }
 
+    main {
+      margin: 0 auto;
+    }
+
     img {
       max-width: 100%;
-      margin: 0 auto;
       border-radius: 10px;
     }
 
